[project]
name = "compars"
description = "Bear-agnostic DataFrame comparison library"
version = "0.0.1"
authors = [
  { name = "Hadar Sharon", email = "hadar.sharon94@gmail.com" },
]
requires-python = ">=3.10"
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "rust", "spark", "pandas", "pyspark", "data-engineering", "dataframe", "dataframes", "data-quality", "data-profiling", "koalas", "polars"]

[project.urls]
Documentation = "https://github.com/hadarsharon/compars/wiki"
Repository = "https://github.com/hadarsharon/compars"
Changelog = "https://github.com/hadarsharon/compars/releases"

[tool.setuptools.packages]
find = { }

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint]
exclude = [
    "*.md",
    ".git",
    ".idea",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "CODEOWNERS",
    "venv"
]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
preview = true